# ExifPlus

./: CONTRIBUTING.md  README.md  publish-pypi.yml  pyproject.toml  requirements.txt
.github/workflows/: python-package.yml
docs/: api.rst  conf.py  contributing.rst  features.rst  index.rst  installation.rst  modules.rst  requirements-docs.txt  troubleshooting.rst  usage.rst
exifplus/: __init__.py  app.py
